# Tacit

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  prod_implementation.md  tsconfig.json  vitest.config.ts
apps/agent-runtime/: Dockerfile  Dockerfile.sandbox  modal_transcription.py  pyproject.toml
apps/agent-runtime/app/: codex_login.py  codex_runner.py  codex_runner_api.py  evidence_ingestion.py  ingestion_worker.py  main.py  runtime.py  schemas.py  source_intelligence.py  source_intelligence_worker.py  video_sampling.py
apps/agent-runtime/tacit_agent_runtime.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/agent-runtime/tests/: test_codex_runner.py  test_evidence_ingestion.py  test_health.py  test_runtime.py  test_schemas.py  test_source_intelligence.py  test_video_sampling.py
apps/web/: .env.local.example  Dockerfile  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/: env.ts  (+1 more)
docs/: evidence-intake.md  idea.md  implementation_plan.md  pilot-operations.md  plan.md  production-contract.md  sandbox-execution.md
scripts/: demo-reset.mjs  invoice-seed.mjs  seed.mjs
supabase/migrations/: 20260715000100_create_tacit_core.sql  20260715000200_enable_tacit_rls.sql  20260715000300_add_paused_observation_sessions.sql  20260715000400_add_workflow_reconstruction_provenance.sql  20260715000500_add_clarification_resolution.sql  20260715000600_enable_workflow_rule_diffs_rls.sql  20260715000700_add_agent_build_logs.sql  (+21 more)
(+145 files in other folders)
