[project]
name = "tacit-agent-runtime"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115,<1", "pydantic-settings>=2.7,<3", "uvicorn>=0.34,<1", "pytest>=8.3,<9"]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "ruff>=0.9,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
